# mls-rs-uniffi

./: .gitignore  Cargo.toml  LICENSE.md  README.md
bindings/: mls_rs_uniffi_ios.swift  mls_rs_uniffi_iosFFI.h  module.modulemap
mls-rs-uniffi-ios/: Cargo.toml  README.md
mls-rs-uniffi-ios/src/: client.rs  config.rs  group.rs  lib.rs  message.rs  mls_rs_error.rs
mls-rs-uniffi-ios/src/config/: group_context.rs  group_state.rs  member_validation_context.rs  mod.rs
scripts/: buildIos.swift
uniffi-bindgen/: Cargo.toml
