[package]
name = "mls-rs-uniffi-ios"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "mls_rs_uniffi_ios"

[dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs/", version = "0.28.3" }
mls-rs = { git = "https://github.com/germ-mark/mls-rs/", rev="8df679164ac0c94077e3b0528f780177d92839c7", features = ["replace_proposal"]}
mls-rs-core = { git = "https://github.com/germ-mark/mls-rs/", version = "0.20.0"}
mls-rs-crypto-cryptokit = { git = "https://github.com/germ-mark/mls-rs/", version="0.2.0"}