[package]
name = "mls-rs-uniffi-ios"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "mls_rs_uniffi_ios"

[dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs/", version = "0.28.3" }
mls-rs = { git = "https://github.com/germ-mark/mls-rs/", branch="germ-lite-fork"}
mls-rs-core = { git = "https://github.com/germ-mark/mls-rs/", branch="germ-lite-fork"}
mls-rs-crypto-cryptokit = { git = "https://github.com/germ-mark/mls-rs/", branch="germ-lite-fork"}

maybe-async = "0.2.10"
thiserror = "1.0.57"