[package]
name = "mls-rs-uniffi-ios"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "mls_rs_uniffi_ios"

[dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs/", version = "0.29.0" }
mls-rs = { git = "https://github.com/germ-mark/mls-rs/", tag="0.42.2-germ2"}
mls-rs-core = { git = "https://github.com/germ-mark/mls-rs/", tag="0.42.2-germ2"}
mls-rs-crypto-cryptokit = { git = "https://github.com/germ-mark/mls-rs/", tag="0.42.2-germ2"}

maybe-async = "0.2.10"
thiserror = "1.0.57"